--- a/userDetailsDemo/src/main/resources/templates/login.html
+++ b/userDetailsDemo/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>用户登录</h1>
-    <form method="post" th:action="@{/login}">
+    <form method="post" th:action="@{/doLogin}">
         用户名：<input name="username" type="text"> <br>
         密码：<input name="password" type="password"> <br>
         <input type="submit" value="登录">
